# displaydoc

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
examples/: simple.rs
src/: attr.rs  displaydoc.wasm  expand.rs  fmt.rs  input.rs  lib.rs
tests/: compile_tests.rs  happy.rs  variantless.rs  with_thiserror_tests.rs
tests/no_std/: enum_prefix_missing.rs  enum_prefix_missing.stderr  multi_line.rs  multi_line.stderr  multi_line_allow.rs  with.rs  without.rs  without.stderr
tests/std/: enum_prefix.rs  enum_prefix_missing.stderr  multi_line.stderr  multi_line_allow.rs  multiple.rs  without.stderr
tests/ui/: enum_prefix_missing.stderr  multi_line.rs  multi_line.stderr  multi_line_allow.rs  multi_line_line_break.stderr  multi_line_line_break_block.stderr  without.stderr
