[package]
name = "displaydoc"
version = "0.2.0"
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yaahc/displaydoc"
homepage = "https://github.com/yaahc/displaydoc"
documentation = "https://docs.rs/displaydoc/0.1.0/displaydoc"
keywords = ["display", "derive"]
description = """
A derive macro for implementing the display Trait via a doc comment and string interpolation
"""

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = "1.0"
static_assertions = "0.3.4"
libc = { version = "0.2", default-features = false }
rustversion = "1.0.0"
