[package]
name = "displaydoc-watt"
version = "0.1.0"
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/yaahc/displaydoc"
homepage = "https://github.com/yaahc/displaydoc"
documentation = "https://docs.rs/displaydoc/0.1.0/displaydoc"
keywords = ["display", "derive"]
description = """
A derive macro for implementing the display Trait via a doc comment and string interpolation
"""

[lib]
proc-macro = true

[features]
default = ["std"]
std = []
[dependencies]
watt = "0.3"

[dev-dependencies]
trybuild = "1.0"
static_assertions = "0.3.4"
libc = { version = "0.2", default-features = false }
rustversion = "1.0.0"
pretty_assertions = "0.6.1"
