[package]
name = "displaydoc"
version = "0.1.7"
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/yaahc/displaydoc"
homepage = "https://github.com/yaahc/displaydoc"
documentation = "https://docs.rs/displaydoc"
keywords = ["display", "derive"]
description = """
A derive macro for implementing the display Trait via a doc comment and string interpolation
"""

[lib]
proc-macro = true

[features]
default = ["std"]
std = []

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = "1.0"
static_assertions = "0.3.4"
libc = { version = "0.2", default-features = false }
rustversion = "1.0.0"
pretty_assertions = "0.6.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
no-dev-version = true

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "Unreleased"
replace="{{version}}"

[[package.metadata.release.pre-release-replacements]]
file = "src/lib.rs"
search = "#!\\[doc\\(html_root_url.*"
replace = "#![doc(html_root_url = \"https://docs.rs/{{crate_name}}/{{version}}\")]"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "ReleaseDate"
replace="{{date}}"

[[package.metadata.release.pre-release-replacements]]
file="CHANGELOG.md"
search="<!-- next-header -->"
replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate"
exactly=1

[[package.metadata.release.pre-release-replacements]]
file="CHANGELOG.md"
search="<!-- next-url -->"
replace="<!-- next-url -->\n[Unreleased]: https://github.com/yaahc/{{crate_name}}/compare/{{tag_name}}...HEAD"
exactly=1

# # Disable this replacement on the very first release
# [[package.metadata.release.pre-release-replacements]]
# file = "CHANGELOG.md"
# search = "\\.\\.\\.HEAD"
# replace="...{{tag_name}}"
# exactly = 1